fix: revert changes, fix spacing

--- a/packages/components/src/components/list-item/list-item.css
+++ b/packages/components/src/components/list-item/list-item.css
@@ -13,7 +13,7 @@
   --display: block;
   --font-size: var(--telekom-typography-font-size-body);
   --line-height: var(--telekom-typography-line-spacing-standard);
-  --spacing-left: calc(0.25ch + var(--telekom-spacing-unit-x4));
+  --spacing-left: calc(0.5ch + var(--telekom-spacing-unit-x4));
 
   --font-marker-ordered: var(--telekom-text-style-body);
   --font-marker-ordered-nested: var(--telekom-text-style-small-bold);
@@ -33,18 +33,15 @@
   position: relative;
   font-size: var(--font-size);
   line-height: var(--line-height);
-  margin-top: var(--telekom-spacing-unit-x1);
-}
-
-.list-item--unordered {
   padding-left: var(--spacing-left);
+  margin-top: var(--telekom-spacing-unit-x1);
 }
 
 .list-item:before {
   content: '';
   top: 0;
   left: 0;
-  margin-right: var(--telekom-spacing-unit-x2);
+  position: absolute;
 }
 
 .list-item--unordered:before {
@@ -57,8 +54,6 @@
   border-radius: 50%;
   width: var(--telekom-spacing-unit-x2);
   height: var(--telekom-spacing-unit-x2);
-  position: absolute;
-  margin-right: 0;
 }
 
 .list-item--nested.list-item--unordered:before {
@@ -69,6 +64,7 @@
 .list-item--ordered:before {
   content: attr(data-index) '.';
   font: var(--font-marker-ordered);
+  font-variant-numeric: tabular-nums;
 }
 
 .list-item--nested.list-item--ordered:before {
